objects/Cloud_News__e.object
<CustomObject>
    <description>Cloud news events deliver news at your fingertips.</description>
    <label>Cloud News</label>
    <pluralLabel>Cloud News</pluralLabel>
    <fields>
        <fullName>Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>News_Content__c</fullName>
        <label>News Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>